# json2cpp

./: .clang-tidy  .gitignore  .lgtm.yml  CMakeLists.txt  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  conanfile.py  conanfile.txt
.github/workflows/: ci.yml  codeql-analysis.yml  create-snapshots.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
examples/: test.json
fuzz_test/: CMakeLists.txt
include/json2cpp/: constexpr_json.hpp  json2cpp.hpp  json2cpp_adapter.hpp
include/json_compiler/: constexpr_json.hpp
src/: CMakeLists.txt  json2cpp.cpp  json2cpp.hpp  json2cppConfig.cmake  json_compiler.cpp  json_compiler.hpp  main.cpp  schema_validator.cpp
test/: CMakeLists.txt  catch_main.cpp  constexpr_schema_tests.cpp  constexpr_tests.cpp  tests.cpp  valijson_tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
